# ai-coding-agent

./: .gitignore  Dockerfile  LOCAL_DEV.md  Makefile  QUICKSTART.md  README.md  README_INSTALL.md  STATUS.md  SUMMARY.md  install.sh  pyproject.toml  uninstall.sh
.cursor/plans/: ai_coding_agent_poc_28cfb971.plan.md
.github/workflows/: refine-pr.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  ITERATION_3.md  LLM_CONFIGURATION.md  SECURITY.md  SETUP_STATUS.md
k8s/base/: configmap.yaml  deployment.yaml  keda-auth.yaml  namespace.yaml  ollama-deployment.yaml  rabbitmq-simple.yaml  rabbitmq-values.yaml  scaledobject.yaml
k8s/secrets/: github-token.yaml.template  rabbitmq-credentials.yaml.template
scripts/: cleanup-local.sh  requirements.txt  setup-github-token.sh  setup-local.sh  test-iteration3.py  test-ollama-direct.py  test-ollama-simple.sh  test-queue.py  verify-image.sh
src/worker/: Dockerfile  __init__.py  config.py  llm_client.py  main.py  models.py  requirements.txt
src/worker/git/: git_client.py  git_handler.py  github_client.py
src/worker/modes/: quickfix_mode.py  refine_mode.py
worker/: Dockerfile  config.py  context_builder.py  git_handler.py  github_client.py  llm_client.py  logger.py  main.py  models.py  requirements.txt
worker/git/: git_client.py  git_handler.py  github_client.py
worker/modes/: __init__.py  plan_mode.py
